8313816: Accessing jmethodID might lead to spurious crashes