src/hotspot/share/classfile/classFileParser.cpp
@@ -5576,8 +5576,8 @@ ClassFileParser::~ClassFileParser() {
   }
 
   if (_methods != nullptr) {
-    // Free methods
-    InstanceKlass::deallocate_methods(_loader_data, _methods);
+    // Free methods - those methods are not fully wired and miss the method holder
+    InstanceKlass::deallocate_methods(_loader_data, _methods, false);
   }
 
   // beware of the Universe::empty_blah_array!!
