src/hotspot/share/oops/instanceKlass.hpp
@@ -992,7 +992,8 @@ public:
   // instanceKlasses and the metadata they point to.
   void deallocate_contents(ClassLoaderData* loader_data);
   static void deallocate_methods(ClassLoaderData* loader_data,
-                                 Array<Method*>* methods);
+                                 Array<Method*>* methods,
+                                 bool with_method_holders = true);
   void static deallocate_interfaces(ClassLoaderData* loader_data,
                                     const Klass* super_klass,
                                     Array<InstanceKlass*>* local_interfaces,
