test/lib/sun/hotspot/WhiteBox.java
@@ -383,8 +383,28 @@ public class WhiteBox {
   public native void freeMetaspace(ClassLoader classLoader, long addr, long size);
   public native long incMetaspaceCapacityUntilGC(long increment);
   public native long metaspaceCapacityUntilGC();
+<<<<<<< HEAD:test/lib/sun/hotspot/WhiteBox.java
   public native boolean metaspaceShouldConcurrentCollect();
   public native long metaspaceReserveAlignment();
+=======
+  public native long metaspaceSharedRegionAlignment();
+
+  public native void cleanMetaspaces();
+
+  // Metaspace Arena Tests
+  public native long createMetaspaceTestContext(long commit_limit, long reserve_limit);
+  public native void destroyMetaspaceTestContext(long context);
+  public native void purgeMetaspaceTestContext(long context);
+  public native void printMetaspaceTestContext(long context);
+  public native long getTotalCommittedWordsInMetaspaceTestContext(long context);
+  public native long getTotalUsedWordsInMetaspaceTestContext(long context);
+  public native long createArenaInTestContext(long context, boolean is_micro);
+  public native void destroyMetaspaceTestArena(long arena);
+  public native long allocateFromMetaspaceTestArena(long arena, long word_size);
+  public native void deallocateToMetaspaceTestArena(long arena, long p, long word_size);
+
+  public native long maxMetaspaceAllocationSize();
+>>>>>>> cdd1a6e851b (8313816: Accessing jmethodID might lead to spurious crashes):test/lib/jdk/test/whitebox/WhiteBox.java
 
   // Don't use these methods directly
   // Use sun.hotspot.gc.GC class instead.
